# dicomfix

./: .dockerignore  .gitignore  README.md  pyproject.toml  python-app.yml
.github/workflows/: python-app.yml
dicomfix/: __dicom_handler.py  __version__.py  beam_model.py  config.py  config_parser.py  dicom_handler.py  dicomexport.py  dicomutil.py  export.py  export_topas.py  field.py  gui.py  layer.py  main.py  main_window.ui  plan.py  spot.py  ui_model.py  ui_view.py
dicomfix/gui/: controller.py  main.py  main_window.ui  model.py  view.py
dicomfix/web/: app.py
docker/: Dockerfile  README.md  dicomfix-webapp.service
res/: Plan5.5.dcm
tests/: test_process.py  test_simple.py
