
[build-system]
requires = ["setuptools>=65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicomfix"
version = "0.1.0"
description = "A brief description of what your project does"
authors = [
    { name = "Niels Bassler", email = "nbassler@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["pydicom>=2.3.1"]

[tool.setuptools]
packages = ["dicomfix"]

[project.optional-dependencies]
gui = ["pyqt6-tools"]
web = ["streamlit>=1.12.0"]
dev = ["flake8>=6.0.0", "pytest>=7.2.1"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
max-line-length = 127

[tool.yapf]
based_on_style = "pep8"
column_limit = 127

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
